--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div style="text-align: center">
       <img
         style="align-self: center"
-        src="./Gurveer_1.jpg"
+        src="./Gurveer_1.jpeg"
         alt="Gurveer Singh Virk"
         height="300px"
       />
