--- a/index.html
+++ b/index.html
@@ -1,104 +1,289 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RESUME</title>
-    <style>
-      table,
-      td,
-      th {
-        border: 0.5px solid lightgray;
-        border-collapse: collapse;
+    <title>PORTFOLIO</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+      />
+      <link
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+        crossorigin="anonymous"
+      />
+      <style>
+      table.table1 tbody td,
+      thead th {
+        border: 2px solid white;
+        border-collapse: separate;
         padding: 10px;
+        cursor: pointer;
       }
       table {
-        border: 3px solid black;
+        border: 3px solid rgb(19, 7, 176);
       }
       thead {
-        background-color: rgb(148, 180, 159);
+        background-color: rgb(18, 84, 238);
         color: white;
       }
-      body {
-        background-color: rgb(252, 248, 232);
-        font-family: sans-serif;
+      .nav-link:hover,
+      .h:hover {
+        filter: brightness(5);
+        color: white;
       }
-      img {
-        box-shadow: 0px 6px 20px gray;
-        border-radius: 10px;
+      p,
+      li {
+        font-size: 20px;
+      }
+      hr {
+        height: 2px;
+        background-color: black;
+      }
+      @media screen and (max-width: 575px) {
+        .pic {
+          float: initial !important;
+          margin-left: auto;
+        }
       }
     </style>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
 
-  <body>
-    <div style="text-align: center">
-      <img
-        style="align-self: center"
-        src="./Gurveer_1.jpeg"
-        alt="Gurveer Singh Virk"
-        height="300px"
-      />
-      <h2>GURVEER SINGH VIRK</h2>
+  <body style="background-color: #fdf1cb">
+    <header>
+      <!-- place navbar here -->
+      <nav
+        class="navbar navbar-expand-sm navbar-light"
+        style="background-color: #cc5500"
+      >
+        <div class="container-fluid">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul
+              class="navbar-nav me-auto ms-auto mb-1 mb-lg-0 nav w-100 justify-content-evenly"
+            >
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  style="color: rgba(255, 255, 255, 0.666)"
+                  aria-current="page"
+                  href="#"
+                >
+                  <i class="fa fa-home"></i>
+                  <span class="h">About</span></a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  style="color: rgba(255, 255, 255, 0.666)"
+                  aria-current="page"
+                  href="#acad"
+                >
+                  <i class="fa fa-info"></i>
+                  <span class="h">Academics</span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  style="color: rgba(255, 255, 255, 0.666)"
+                  aria-current="page"
+                  href="#tech"
+                >
+                  <i class="fa fa-list"></i>
+                  <span class="h">Technical Skills</span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  style="color: rgba(255, 255, 255, 0.666)"
+                  aria-current="page"
+                  href="#pr"
+                >
+                  <i class="fa fa-info"></i>
+                  <span class="h">Projects</span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  style="color: rgba(255, 255, 255, 0.666)"
+                  aria-current="page"
+                  href="#ac"
+                >
+                  <i class="fa fa-info"></i>
+                  <span class="h">Achievements</span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  style="color: rgba(255, 255, 255, 0.666)"
+                  aria-current="page"
+                  href="#con"
+                >
+                  <i class="fa fa-address-card"></i>
+                  <span class="h">Contact Me</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <br />
+      <div class="container">
+        <div style="width: 100%; text-align: center">
+          <img
+            src="/Gurveer_1.jpeg"
+            style="float: right; border: 10px solid rgb(255, 196, 86)"
+            height="250px"
+            class="rounded-circle pic"
+          />
+        </div>
+        <h1 class="display-3">GURVEER SINGH VIRK</h1>
+        <p>
+          Email ID:
+          <a href="mailto:gurveervirk.15517@gmail.com" class="display-8"
+            >gurveervirk.15517@gmail.com</a
+          >
+        </p>
+        <hr />
+        <h3><u>Career Objective:</u></h3>
+        <p>
+          Seeking a responsible career opportunity in the field of Computer
+          Science where I can utilize my logical and technical skills towards
+          personal and professional development
+        </p>
+        <hr />
+        <h3 id="acad"><u>Academic information:</u></h3>
+        <div style="overflow-x: auto">
+          <table class="table1">
+            <thead>
+              <tr>
+                <th>Course details</th>
+                <th>Institution</th>
+                <th>University/Board</th>
+                <th>year of passing</th>
+                <th>CGPA</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Bachelors of Technology (Computer Science Engineering)</td>
+                <td>Keshav Memorial Institute of Technology</td>
+                <td>JNTUH</td>
+                <td>2025</td>
+                <td>8.8</td>
+              </tr>
+              <tr>
+                <td>Intermediate-MPBC</td>
+                <td>Delhi Public School, Nacharam</td>
+                <td>CBSE</td>
+                <td>2021</td>
+                <td>96.4%</td>
+              </tr>
+              <tr>
+                <td>School of Secondary Education</td>
+                <td>Delhi Public School, Nacharam</td>
+                <td>CBSE</td>
+                <td>2019</td>
+                <td>95.6%</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <hr />
+        <h3 id="tech"><u>Technical skills:</u></h3>
+        <h4>Programming Languages:</h4>
+        <ul>
+          <li>C</li>
+          <li>C++</li>
+          <li>Java</li>
+          <li>Python</li>
+        </ul>
+        <h4>Databases:</h4>
+        <ul>
+          <li>MySQL</li>
+        </ul>
+        <h4>Web Technologies:</h4>
+        <ul>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>BootStrap</li>
+          <li>Node</li>
+        </ul>
+        <hr />
+        <h3 id="pr"><u>Projects:</u></h3>
+        <ul>
+          <li><b>Planetary Rover with Robotic Arm using ROS:</b>
+          <ul>
+            <li>6WD Rover with a 6-DOF Robotic Arm</li>
+            <li>Used ROS Melodic and MAVROS on NVIDIA Jetson Nano for automation</li>
+            <li>Data acquired using IMU, GPS, LIDAR and Cameras</li>
+            <li>Built for Industrial and Space applications such as:
+              <ul>
+                <li>Pick and Place operations</li>
+                <li>Sample collection and delivery</li>
+                <li>Mapping of surroundings</li>
+              </ul>
+            </li>
+          </ul>
+          </li>
+          <li><b>Faculty Recruiting and Management:</b>
+            <ul>
+              <li>Developed web application using MERN stack to streamline Faculty Recruitment and Management</li>
+              <li>Used MongoDB for improved data security and storage</li>
+              <li>Elaborated on user roles, data access and important services</li>
+            </ul>
+          </li>
+        </ul>
+        <hr />
+        <h3 id="ac"><u>Achievements:</u></h3>
+        <ul>
+          <li>Silver Medal in Python for Data Science Course (NPTEL)</li>
+          <li>Silver Medal in Lighter than Air Systems Course (NPTEL)</li>
+        </ul>
+        <hr />
+        <h3 id="con"><u>Contact Details:</u></h3>
+        <ul>
+          <li><a style="font-weight: bold">Phone Number:</a> 7014294747</li>
+        </ul>
+      </div>
+    </main>
+    <footer>
+      <!-- place footer here -->
+    </footer>
+    <!-- Bootstrap JavaScript Libraries -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+      crossorigin="anonymous"
+    ></script>
 
-      <h4>
-        Email:
-        <a href="mailto:gurveervirk.15517@gmail.com"
-          >gurveervirk.15517@gmail.com</a
-        >
-      </h4>
-      <h4>Mobile Number: 7014294747</h4>
-    </div>
-
-    <hr />
-    <h3>Career Objective</h3>
-    <p>
-      Seeking a responsible career opportunity in the field of Computer Science
-      where I can utilize my logical and technical skills towards personal and
-      professional development
-    </p>
-
-    <h3>Academic information</h3>
-    <table>
-      <thead>
-        <tr>
-          <th>Course details</th>
-          <th>Institution</th>
-          <th>University/Board</th>
-          <th>year of passing</th>
-          <th>CGPA</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Bachelors of Technology (Computer Science Engineering)</td>
-          <td>Keshav Memorial Institute of Technology</td>
-          <td>JNTUH</td>
-          <td>2025</td>
-          <td>8.6</td>
-        </tr>
-        <tr>
-          <td>Intermediate-MPBC</td>
-          <td>Delhi Public School, Nacharam</td>
-          <td>CBSE</td>
-          <td>2021</td>
-          <td>96.4%</td>
-        </tr>
-        <tr>
-          <td>School of Secondary Education</td>
-          <td>Delhi Public School, Nacharam</td>
-          <td>CBSE</td>
-          <td>2019</td>
-          <td>95.6%</td>
-        </tr>
-      </tbody>
-    </table>
-    <h3>Technical skills</h3>
-    <h4>Programming Languages</h4>
-    <ul>
-      <li>C</li>
-      <li>Java</li>
-      <li>Python</li>
-    </ul>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
+      integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
