--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <div class="row">
         <div class="col-md-3">
           <img
-            src="Profile_Picture.jpeg"
+            src="/Profile_Picture.jpeg"
             alt="Profile Image"
             class="img-fluid rounded-circle border border-warning mb-3 profile-picture"
           />
